<project>
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.github.bioDS</groupId>
        <artifactId>beast-phylonco-root</artifactId>
        <version>1.3.0</version>
    </parent>

    <artifactId>phylonco-beast</artifactId>
    <version>${phylonco-beast.version}</version>

    <properties>
        <!-- version names should be consistent with version.xml, and jars in lib  -->
        <beast.module>beast.base</beast.module>
        <beast.main>beast.base.minimal.BeastMain</beast.main>
        <beast.args/>
        <beast.pkg.name>beast-phylonco</beast.pkg.name>

        <mutable.alignment.version>0.1.1</mutable.alignment.version>

        <!-- apache commons -->
        <commons-math4-legacy.version>4.0-beta1</commons-math4-legacy.version>
        <commons-math4-core.version>4.0-beta1</commons-math4-core.version>
        <commons-statistics.version>1.2</commons-statistics.version>
    </properties>

    <dependencies>
        <!-- BEAST 3 -->
        <dependency>
            <groupId>io.github.compevol</groupId>
            <artifactId>beast-pkgmgmt</artifactId>
            <version>${beast.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.compevol</groupId>
            <artifactId>beast-base</artifactId>
            <version>${beast.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.compevol</groupId>
            <artifactId>beast-fx</artifactId>
            <version>${beast.version}</version>
        </dependency>

        <dependency>
            <groupId>io.github.compevol</groupId>
            <artifactId>mutable-alignment</artifactId>
            <version>${mutable.alignment.version}</version>
        </dependency>

        <!-- Commons Math 4 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math4-legacy</artifactId>
            <version>${commons-math4-legacy.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math4-core</artifactId>
            <version>${commons-math4-core.version}</version>
        </dependency>

        <!-- Commons Statistics -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-statistics-distribution</artifactId>
            <version>${commons-statistics.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>25</release>
                    <encoding>UTF-8</encoding>
                    <!-- removed jmh here -->
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            <!-- Copy version.xml to target/ (for ZIP assembly) and target/classes/
                 (embeds it in the JAR and makes it visible to BEAST_PACKAGE_PATH) -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-version-xml</id>
                        <phase>generate-resources</phase>
                        <goals><goal>copy-resources</goal></goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}</directory>
                                    <includes><include>version.xml</include></includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                    <execution>
                        <id>embed-version-xml-in-jar</id>
                        <phase>generate-resources</phase>
                        <goals><goal>copy-resources</goal></goals>
                        <configuration>
                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}</directory>
                                    <includes><include>version.xml</include></includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Run BEAST on the module path:
                 mvn exec:exec -Dbeast.args="examples/b3test/cats_halfAlignment.xml"
                 mvn exec:exec -Dbeast.module=beast.fx -Dbeast.main=beastfx.app.beauti.Beauti -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <configuration>
                    <executable>java</executable>
                    <workingDirectory>${project.basedir}</workingDirectory>
                    <commandlineArgs>--module-path %classpath -DBEAST_PACKAGE_PATH=${project.build.outputDirectory} -m ${beast.module}/${beast.main} ${beast.args}</commandlineArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals><goal>jar-no-fork</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/phylonco-beast-assembly.xml</descriptor>
                    </descriptors>
                    <outputDirectory>${project.build.directory}</outputDirectory>
                    <appendAssemblyId>false</appendAssemblyId>
                    <finalName>${project.artifactId}-${project.version}</finalName>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>


</project>